RESOLVED FIXED279709
[Writing Tools] All text disappears upon animation of rewrite retry in Mail compose.
https://bugs.webkit.org/show_bug.cgi?id=279709
Summary [Writing Tools] All text disappears upon animation of rewrite retry in Mail c...
Megan Gardner
Reported 2024-09-14 00:04:50 PDT
[WritingTools] in Mail - All text disappears upon animation of rewrite retry in Mail compose.
Attachments
Megan Gardner
Comment 1 2024-09-14 00:04:52 PDT
Megan Gardner
Comment 2 2024-09-14 00:14:13 PDT
EWS
Comment 3 2024-09-16 13:42:34 PDT
Committed 283722@main (4a826bf145c6): <https://commits.webkit.org/283722@main> Reviewed commits have been landed. Closing PR #33660 and removing active labels.
EWS
Comment 4 2024-09-19 15:07:17 PDT
Committed 283286.100@safari-7620-branch (ec3d714f0a02): <https://commits.webkit.org/283286.100@safari-7620-branch> Reviewed commits have been landed. Closing PR #1851 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.