[WritingTools] All text disappears upon animation of rewrite retry in Mail compose. rdar://135918945 https://bugs.webkit.org/show_bug.cgi?id=279709

Reviewed by Aditya Keerthi.

Completion handler and active animation were not being reset, so on
a restart we got into a bad state and crashed.

* Source/WebKit/WebProcess/WebPage/Cocoa/TextAnimationController.mm:
(WebKit::TextAnimationController::addSourceTextAnimationForActiveWritingToolsSession):
(WebKit::TextAnimationController::addDestinationTextAnimationForActiveWritingToolsSession):
(WebKit::TextAnimationController::clearAnimationsForActiveWritingToolsSession):

Canonical link: https://commits.webkit.org/283722@main